--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 <h1>FrontEnd Developer</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi odit iure dolores dignissimos sed recusandae similique placeat, accusamus dolorum! Tempore quibusdam consequuntur quod fugiat nesciunt, adipisci porro suscipit esse quis!</p>
                 <div class="arrow-down">
-                    <a href="#">
+                    <a href="#about">
                         <i class="fa-solid fa-arrow-down-long"></i>
                     </a>
                     <p>If You need to hire me <br><span>Please Scroll down</span></p>
@@ -80,5 +80,21 @@
         </div>
     </section>
     <!-- End Landing -->
+    <!-- Start About -->
+    <section class="about" id="about">
+        <h2 class="main-heading">&lt;/about me&gt;</h2>
+        <div class="container">
+            Content Here
+            Content Here
+            Content Here
+            Content Here
+            Content Here
+            Content Here
+            Content Here
+            Content Here
+            Content Here
+        </div>
+    </section>
+    <!-- End About -->
 </body>
 </html>
