--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <!-- Start Header -->
-    <header>
+    <header id="home">
         <div class="container">
             <a href="#" class="logo">
                 <i class="fa-solid fa-laptop-code"></i>
@@ -23,13 +23,13 @@
             <nav>
                 <ul>
                     <li>
-                        <a href="#">
+                        <a href="#home">
                             <i class="fa-solid fa-home"></i>
                             Home
                             </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#about">
                             <i class="fa-solid fa-mug-saucer"></i>
                             About
                         </a>
@@ -84,15 +84,35 @@
     <section class="about" id="about">
         <h2 class="main-heading">&lt;/about me&gt;</h2>
         <div class="container">
-            Content Here
-            Content Here
-            Content Here
-            Content Here
-            Content Here
-            Content Here
-            Content Here
-            Content Here
-            Content Here
+            <img src="./images/about2.jpg" alt="about" >
+            <div class="text">
+                <h3>Who Am I ?</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus unde incidunt fugiat deleniti! Quidem, sequi? Lorem ipsum dolor sit amet consectetur adipisicing elit..</p>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Earum, ad. Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p>Follow me on</p>
+                <ul class="media">
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-square-facebook"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" >
+                            <i class="fa-brands fa-square-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" >
+                            <i class="fa-brands fa-square-github"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </section>
     <!-- End About -->
