--- a/index.html
+++ b/index.html
@@ -116,5 +116,41 @@
         </div>
     </section>
     <!-- End About -->
+    <!-- Start Skills -->
+    <section class="skills" id="skills">
+        <h2 class="main-heading">
+            &lt;/skills&gt;
+        </h2>
+        <p class="my-skill">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis nihil possimus ipsa id quam quisquam quasi officiis unde sint veritatis!</p>
+        <div class="container">
+            <div class="box">
+                <h3>Basics</h3>
+                <ul>
+                    <li><i class="fa-brands fa-html5"></i></li>
+                    <li><i class="fa-brands fa-css3-alt"></i></li>
+                    <li><i class="fa-brands fa-js"></i></li>
+                </ul>
+            </div>
+            <div class="box">
+                <h3>Frameworks</h3>
+                <ul>
+                    <li><i class="fa-brands fa-bootstrap"></i></li>
+                    <li><i class="fa-brands fa-react"></i></li>
+                    <li>
+                        <i class="fa-brands fa-sass"></i>
+                    </li>
+                </ul>
+            </div>
+            <div class="box">
+                <h3>Others</h3>
+                <ul>
+                    <li><i class="fa-brands fa-git-alt"></i></li>
+                    <li><i class="fa-brands fa-github-alt"></i></li>
+                </ul>
+            </div>
+            </div>
+        </div>
+    </section>
+    <!-- End Skills -->
 </body>
 </html>
