--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#skills">
                             <i class="fa-solid fa-user-gear"></i>
                             Skills
                         </a>
@@ -82,7 +82,7 @@
     <!-- End Landing -->
     <!-- Start About -->
     <section class="about" id="about">
-        <h2 class="main-heading">&lt;/about me&gt;</h2>
+        <h2 class="main-heading">&lt;/about&gt;</h2>
         <div class="container">
             <img src="./images/about2.jpg" alt="about" >
             <div class="text">
@@ -152,5 +152,47 @@
         </div>
     </section>
     <!-- End Skills -->
+    <!-- Start Project -->
+    <section class="projects" id="projects">
+        <h2 class="main-heading">
+            &lt;/projects&gt;
+        </h2>
+        <div class="container">
+            <div class="box">
+                <a href="#">
+                    <img src="./images/project1.png" alt="project1.png"">
+                </a>
+            </div>
+            <div class="box">
+                <a href="#">
+                    <img src="./images/project2.png
+                    " alt="project2.png"">
+                </a>
+            </div>
+            <div class="box">
+                <a href="#">
+                    <img src="./images/project3.png" alt="project3.png"">
+                </a>
+            </div>
+            <div class="box">
+                <a href="#">
+                    <img src="./images/project4.png" alt="project4.png"">
+                </a>
+            </div>
+            <div class="box">
+                <a href="#">
+                    <img src="./images/project5.png" alt="project5.png"">
+                </a>
+            </div>
+            <div class="box">
+                <a href="#">
+                    <img src="./images/project6.png" alt="project6.png"">
+                </a>
+            </div>
+        </div>
+        <a href="#" class="more">More Projects</a>
+
+    </section>
+    <!-- End Project -->
 </body>
 </html>
