--- a/index.html
+++ b/index.html
@@ -190,9 +190,41 @@
                 </a>
             </div>
         </div>
-        <a href="#" class="more">More Projects</a>
+        <a href="#" class="main-btn">More Projects</a>
 
     </section>
     <!-- End Project -->
+    <!-- Start Contact -->
+    <section class="contact" id="contact">
+        <h2 class="main-heading">
+            &lt;/contact&gt;
+        </h2>
+        <div class="container">
+            <div class="text">
+                <h1>Hire Me <br>For The Next <br>Projects</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero explicabo dolorem ab pariatur officia vitae.</p>
+                <ul class="address">
+                    <li>
+                        <i class="fa-solid fa-location-dot"></i>
+                        Hay Moulay Rachid 2,<br>
+                        Diar Essalam, Morocco
+                    </li>
+                    <li>
+                        <i class="fa-solid fa-phone"></i>
+                        +212 604 251 922
+                    </li>
+                </ul>
+            </div>
+            <div class="form">
+                <form>
+                    <input class="inputs" type="text" name="name" placeholder="*Name" required>
+                    <input class="inputs" type="email" name="email" placeholder="*Email" required>
+                    <textarea class="inputs" name="message" placeholder="Text Message" cols="30" rows="10" required></textarea>
+                    <input class="main-btn" type="submit" value="Send Message">
+                </form>
+            </div>
+        </div>
+    </section>
+    <!-- End Contact -->
 </body>
 </html>
