--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#projects">
                             <i class="fa-solid fa-diagram-project"></i>
                             Projects
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#contact">
                             <i class="fa-solid fa-envelope"></i>
                             Contact
                         </a>
@@ -174,21 +174,6 @@
                     <img src="./images/project3.png" alt="project3.png"">
                 </a>
             </div>
-            <div class="box">
-                <a href="#">
-                    <img src="./images/project4.png" alt="project4.png"">
-                </a>
-            </div>
-            <div class="box">
-                <a href="#">
-                    <img src="./images/project5.png" alt="project5.png"">
-                </a>
-            </div>
-            <div class="box">
-                <a href="#">
-                    <img src="./images/project6.png" alt="project6.png"">
-                </a>
-            </div>
         </div>
         <a href="#" class="main-btn">More Projects</a>
 
@@ -226,5 +211,41 @@
         </div>
     </section>
     <!-- End Contact -->
+    <!-- Start Footer -->
+    <footer id="footer">
+        <a class="main-btn top-btn" href="#home"><i class="fa-solid fa-sort-up"></i></a>
+        <div class="container">
+            <p>&copy; Emad <span><i class="fa-solid fa-heart"></i></span> All reserved rights</p>
+             
+                <ul>
+                    <li>Contact me</li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-whatsapp"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <i class="fa-brands fa-instagram"></i>
+                        </a>
+                    </li>
+                </ul>
+            
+            <p>
+                <i class="fa-solid fa-at"></i>
+                imad.mourhal@gmail.com
+            </p>
+            <p>
+                <i class="fa-solid fa-phone"></i>
+                +212 604 251 922
+            </p>
+        </div>
+    </footer>
+    <!-- End Footer -->
 </body>
 </html>
