fix arrow footer

--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@
     <!-- End Contact -->
     <!-- Start Footer -->
     <footer id="footer">
-        <a class="main-btn top-btn" href="#home"><i class="fa-solid fa-sort-up"></i></a>
+        <a class="main-btn top-btn" href="#home">
+            <i class="fa-solid fa-angles-up"></i>
+        </a>
         <div class="container">
             <p>&copy; Emad <span><i class="fa-solid fa-heart"></i></span> All reserved rights</p>
              
