creating pages and fixes main button

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               
            
             <div class="text">
-                <h1><span>&lt;/Hello&gt;</span> I'm Emad,</h1>
+                <h1><span>{Hello}</span> I'm Emad,</h1>
                 <h1>FrontEnd Developer</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi odit iure dolores dignissimos sed recusandae similique placeat, accusamus dolorum! Tempore quibusdam consequuntur quod fugiat nesciunt, adipisci porro suscipit esse quis!</p>
                 <div class="arrow-down">
@@ -124,15 +124,16 @@
         <p class="my-skill">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corporis nihil possimus ipsa id quam quisquam quasi officiis unde sint veritatis!</p>
         <div class="container">
             <div class="box">
-                <h3>Basics</h3>
+                <h3>{Basics}</h3>
                 <ul>
                     <li><i class="fa-brands fa-html5"></i></li>
                     <li><i class="fa-brands fa-css3-alt"></i></li>
                     <li><i class="fa-brands fa-js"></i></li>
                 </ul>
+                <a class="details" href="./pages/skills/basics.html">More Details</a>
             </div>
             <div class="box">
-                <h3>Frameworks</h3>
+                <h3>{Frameworks}</h3>
                 <ul>
                     <li><i class="fa-brands fa-bootstrap"></i></li>
                     <li><i class="fa-brands fa-react"></i></li>
@@ -140,13 +141,17 @@
                         <i class="fa-brands fa-sass"></i>
                     </li>
                 </ul>
+                <a class="details" href="#">More Details</a>
+
             </div>
             <div class="box">
-                <h3>Others</h3>
+                <h3>{Others}</h3>
                 <ul>
                     <li><i class="fa-brands fa-git-alt"></i></li>
                     <li><i class="fa-brands fa-github-alt"></i></li>
                 </ul>
+                <a class="details" href="#">More Details</a>
+
             </div>
             </div>
         </div>
@@ -175,7 +180,7 @@
                 </a>
             </div>
         </div>
-        <a href="#" class="main-btn">More Projects</a>
+        <a href="/pages/projects/projects.html" class="main-btn">More Projects</a>
 
     </section>
     <!-- End Project -->
