fix pages skills

--- a/pages/skills/frameworks.html
+++ b/pages/skills/frameworks.html
@@ -61,16 +61,16 @@
     <!-- Start Skills -->
     <section class="skills" id="skills">
         <h2 class="main-heading">
-            {basics}
+            {frameworks}
         </h2>
     </div>
-    <div class="container" style="display: flex;">
-        <img src="../../images/under_work.png" style="margin: auto;" width="200px" alt="under work" srcset="">
-    </div>
+        <div class="container" style="display: flex;">
+            <img src="../../images/under_work.png" style="margin: auto;" width="200px" alt="under work" srcset="">
+        </div>
         
     </section>
     <!-- End Skills -->
 
-  
+ 
 </body>
 </html>
