--- a/pages/skills/others.html
+++ b/pages/skills/others.html
@@ -61,7 +61,7 @@
     <!-- Start Skills -->
     <section class="skills" id="skills">
         <h2 class="main-heading">
-            {basics}
+            {others}
         </h2>
     </div>
     <div class="container" style="display: flex;">
