--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <i class="fa-brands fa-sass"></i>
                     </li>
                 </ul>
-                <a class="details" href="#">More Details</a>
+                <a class="details" href="./pages/skills/frameworks.html">More Details</a>
 
             </div>
             <div class="box">
@@ -150,7 +150,7 @@
                     <li><i class="fa-brands fa-git-alt"></i></li>
                     <li><i class="fa-brands fa-github-alt"></i></li>
                 </ul>
-                <a class="details" href="#">More Details</a>
+                <a class="details" href="./pages/skills/others.html">More Details</a>
 
             </div>
             </div>
